--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <br>
             <br>
             <button type="button" onclick="annuler()">Annuler</button>
-            <button type="reset" onclick="poster()" >Envoyer</button>
+            <button type="reset" onclick="poster()" class="envoi" >Envoyer</button>
               </form>
             </div>
             <div id="merci">
